--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "emitDecoratorMetadata": true,
     "types": ["node", "jest"]
   },
-  "include": ["src/**/*", "examples/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "test-*.js", "test-*.mjs"]
 }
