--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,13 @@ coverage/
 .env.production
 .env.*.local
 
+# Sensitive/Internal documentation
+doc-internal/
+docs-internal/
+internal-docs/
+private/
+confidential/
+
 # IDE and editor files
 .vscode/*
 !.vscode/extensions.json
