fix: add port 6274 to mcp inspector port management
- MCP Inspector uses TWO ports: 6274 (UI) and 6277 (proxy)
- Updated port-manager.js to include port 6274
- Modified inspector:reset to clean both ports
- Updated documentation to explain dual-port usage
- Fixes stuck Inspector issue when port 6274 is blocked

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test:servers": "node scripts/test-with-servers.js",
     "test:integration": "node scripts/test-with-servers.js 'node tests/test-transport-integration.js'",
     "test:federation": "node tests/test-federation.js",
-    "inspector:reset": "node scripts/port-manager.js kill 6277 --force && npm run inspector",
+    "inspector:reset": "node scripts/port-manager.js kill 6274 --force && node scripts/port-manager.js kill 6277 --force && npm run inspector",
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
     "test:watch": "NODE_OPTIONS='--experimental-vm-modules' jest --watch",
     "test:coverage": "NODE_OPTIONS='--experimental-vm-modules' jest --coverage",
