--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@deposium/duckdb-mcp-native",
-  "version": "0.1.3",
+  "name": "@seed-ship/duckdb-mcp-native",
+  "version": "0.1.4",
   "description": "Native Node.js/TypeScript implementation of DuckDB MCP extension",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -67,7 +67,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/theseedship/duckdb_mcp_node.git"
+    "url": "git+https://github.com/theseedship/duckdb_mcp_node.git"
   },
   "publishConfig": {
     "access": "public",
@@ -108,10 +108,6 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
