fix: resolve jest duplicate mock warnings
- Exclude __mocks__ directories from TypeScript compilation
- Configure Jest to only search src directory for tests and mocks
- Add clean script to remove dist folder
- Prevent duplicate mocks in both src and dist directories

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "LICENSE"
   ],
   "scripts": {
+    "clean": "rm -rf dist",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "dev": "tsx src/index.ts",
