--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "types": ["node", "jest"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "test-*.js", "test-*.mjs"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "test-*.js", "test-*.mjs", "**/__mocks__/**"]
 }
