feat: migrate from jest to vitest for better ESM support
- Install vitest, @vitest/ui, @vitest/coverage-v8
- Create vitest.config.ts with proper ESM configuration
- Migrate all test files from Jest to Vitest syntax
- Remove .skip from 4 test suites (84 tests unblocked)
- Update package.json test scripts for vitest
- Create setup file and mock infrastructure
- Update tsconfig.json to include vitest files

Progress: 31/107 tests passing (up from 4 with Jest)
Next: Fix remaining mock issues to reach 80% coverage target

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "isolatedModules": true,
     "types": ["node", "jest"]
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "test-*.js", "test-*.mjs", "**/__mocks__/**"]
+  "include": ["src/**/*", "vitest.config.ts", "vitest.setup.ts"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "test-*.js", "test-*.mjs"]
 }
