feat: v0.3.0 - Library mode, DuckLake service, and external DuckDB support
## 🚀 Major Features
- Fixed DuckDB initialization conflict - no auto-init on import
- Added getToolHandlersWithService() for external DuckDB instances
- Prevents STDIO pollution in library mode imports

## 📚 Documentation
- Added 'Three Usage Modes' section (Standalone/Library/Embedded)
- Updated deposium_MCPs integration examples
- Added Native DuckDB Tools section with code samples

## 🏔️ DuckLake Service
- Full lakehouse functionality with ACID transactions
- Time travel queries and version management
- Delta log management for transaction history
- Located at: src/service/ducklake.ts

## 🔧 Integration
- Library exports clean - no side effects
- External DuckDB support prevents duplicate instances
- Updated deposium_MCPs to use shared DuckDB service

BREAKING CHANGE: Auto-initialization removed. Use
getToolHandlersWithService() for external DuckDB instances.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seed-ship/duckdb-mcp-native",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "description": "Native Node.js/TypeScript implementation of DuckDB MCP extension",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -25,6 +25,11 @@
       "types": "./dist/federation/index.d.ts",
       "import": "./dist/federation/index.js",
       "require": "./dist/federation/index.js"
+    },
+    "./lib": {
+      "types": "./dist/lib.d.ts",
+      "import": "./dist/lib.js",
+      "require": "./dist/lib.js"
     }
   },
   "files": [
