--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@seed-ship/duckdb-mcp-native",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Native Node.js/TypeScript implementation of DuckDB MCP extension",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -108,7 +108,7 @@
   },
   "homepage": "https://github.com/theseedship/duckdb_mcp_node#readme",
   "dependencies": {
-    "@duckdb/node-api": "^1.3.4-alpha.27",
+    "@duckdb/node-api": "^1.4.0-r.1",
     "@modelcontextprotocol/sdk": "^1.17.3",
     "@types/ws": "^8.18.1",
     "axios": "^1.12.2",
