feat: v0.4.0 - MCP Prompts, enhanced Resources, and dependency updates
- Added MCP Prompts Support with 5 pre-defined prompts
- Enhanced MCP Resources with DuckLake catalogs and multi-tenant spaces
- DuckLake Integration with ACID transactions and time travel
- Updated @modelcontextprotocol/sdk to 1.18.1
- Migrated from Zod v3 to v4
- Replaced standard-version with release-please
- Fixed JSON-RPC protocol corruption issues
- Added Claude Desktop installation instructions

--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,14 @@ LOG_LEVEL=info
 LOG_FILE=logs/duckdb-mcp.log
 
 # Optional: S3/MinIO Configuration
-MINIO_ENDPOINT=localhost:9000
+# Dual endpoint architecture:
+# - MINIO_PUBLIC_ENDPOINT: Used for local development (accessible from your machine)
+# - MINIO_PRIVATE_ENDPOINT: Used in production/Railway (internal network communication)
+# The service automatically selects the appropriate endpoint based on environment
+MINIO_PUBLIC_ENDPOINT=https://s3-bucket.example.com:443  # External/public access
+MINIO_PRIVATE_ENDPOINT=http://minio.internal:9000        # Internal/private access
 MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
-MINIO_USE_SSL=false
+MINIO_USE_SSL=false  # Set to true for production
 MINIO_REGION=us-east-1
 BUCKET_NAME=duckdb-data
