--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "port:kill": "node scripts/port-manager.js kill",
     "port:kill-all": "node scripts/port-manager.js kill-all --force",
     "port:clean": "node scripts/port-manager.js kill-all --force",
+    "inspector:clean": "lsof -i :6277 -t | xargs kill -9 2>/dev/null; lsof -i :6274 -t | xargs kill -9 2>/dev/null || true",
     "test:servers": "node scripts/test-with-servers.js",
     "test:integration": "node scripts/test-with-servers.js 'node tests/test-transport-integration.js'",
     "test:federation": "node tests/test-federation.js",
