feat: add inspector port cleanup commands
- Add inspector:restart command for quick cleanup and restart
- Document port management commands in README
- Add troubleshooting section for port blocking issues
- Provide clear solutions for Inspector port conflicts

Users can now easily recover from port blocking issues with:
npm run inspector:restart

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ MCP_SECURITY_MODE=development
 MCP_MAX_QUERY_SIZE=1000000
 MCP_QUERY_TIMEOUT=30000
 
+MCP_CACHE_DIR=/tmp/mcp-cache      # Cache directory
+MCP_CACHE_TTL=300000               # 5 minutes TTL
+MCP_CACHE_SIZE=104857600           # 100MB max cache
 # Logging
 LOG_LEVEL=info
 LOG_FILE=logs/duckdb-mcp.log
