--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -114,27 +114,47 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create GitHub Release
-        uses: actions/create-release@v1
+        run: |
+          # Create the release using GitHub CLI
+          VERSION="${{ needs.check-version.outputs.version }}"
+          TAG="v${VERSION}"
+
+          # Check if tag already exists
+          if git ls-remote --tags origin | grep -q "refs/tags/${TAG}$"; then
+            echo "Tag ${TAG} already exists, skipping release creation"
+            exit 0
+          fi
+
+          # Create and push tag
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git tag -a "${TAG}" -m "Release ${TAG}"
+          git push origin "${TAG}"
+
+          # Create release body
+          cat > release-notes.md << EOF
+          ## 🚀 Published to npm
+
+          Package: [@seed-ship/duckdb-mcp-native](https://www.npmjs.com/package/@seed-ship/duckdb-mcp-native)
+          Version: ${VERSION}
+
+          ### Installation
+          \`\`\`bash
+          npm install @seed-ship/duckdb-mcp-native@${VERSION}
+          \`\`\`
+
+          ### Changes
+          See [CHANGELOG.md](https://github.com/${{ github.repository }}/blob/main/docs/CHANGELOG.md) for details.
+          EOF
+
+          # Create release using GitHub CLI
+          gh release create "${TAG}" \
+            --repo "${{ github.repository }}" \
+            --title "v${VERSION}" \
+            --notes-file release-notes.md \
+            || echo "Release creation failed, but package was published to npm"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ needs.check-version.outputs.version }}
-          release_name: v${{ needs.check-version.outputs.version }}
-          body: |
-            ## 🚀 Published to npm
-
-            Package: [@seed-ship/duckdb-mcp-native](https://www.npmjs.com/package/@seed-ship/duckdb-mcp-native)
-            Version: ${{ needs.check-version.outputs.version }}
-
-            ### Installation
-            ```bash
-            npm install @seed-ship/duckdb-mcp-native@${{ needs.check-version.outputs.version }}
-            ```
-
-            ### Changes
-            See [CHANGELOG.md](https://github.com/${{ github.repository }}/blob/main/docs/CHANGELOG.md) for details.
-          draft: false
-          prerelease: false
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Comment on commit
         uses: actions/github-script@v7
