fix(ci): remove vitest config files from tsconfig include
Remove vitest.config.ts and vitest.setup.ts from tsconfig.json include
because they are outside rootDir (./src).

This fixes CI typecheck error:
- error TS6059: File is not under 'rootDir'

These files are only needed at runtime and don't need TypeScript
compilation. They are handled by vitest directly.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "isolatedModules": true,
     "types": ["node", "jest"]
   },
-  "include": ["src/**/*", "vitest.config.ts", "vitest.setup.ts"],
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules",
     "dist",
